Update submodule path to use https url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/lidarslam_ros2"]
 	path = src/lidarslam_ros2
-	url = git@github.com:rsasaki0109/lidarslam_ros2.git
+	url = https://github.com/rsasaki0109/lidarslam_ros2.git
 [submodule "src/RGLGazeboPlugin"]
 	path = src/RGLGazeboPlugin
-	url = git@github.com:RobotecAI/RGLGazeboPlugin.git
+	url = https://github.com/RobotecAI/RGLGazeboPlugin.git
